2008-07-04  Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Eric Seidel.

        Bring our implementation of the Netscape plugin API closer to current
        code style guidelines.

        * bridge/NP_jsobject.cpp:
        (getListFromVariantArgs):
        (jsAllocate):
        (jsDeallocate):
        (_NPN_CreateScriptObject):
        (_NPN_CreateNoScriptObject):
        (_NPN_InvokeDefault):
        (_NPN_Invoke):
        (_NPN_Evaluate):
        (_NPN_GetProperty):
        (_NPN_SetProperty):
        (_NPN_RemoveProperty):
        (_NPN_HasProperty):
        (_NPN_HasMethod):
        (_NPN_Enumerate):
        * bridge/npruntime_impl.h:

2008-07-04  Simon Hausmann  <hausmann@webkit.org>

        Fix the Qt/Windows build.

        * WebCore.pro: Moved PluginMainThreadScheduler.cpp to the main
        sources, so that it is always compiled.
        * platform/qt/CursorQt.cpp: #undef CopyCursor, as it's defined by some
        Windows header.
        * platform/qt/KeyboardCodes.h: Don't re-define some of the keycodes
        that are defined by Windows already.
        * platform/qt/TemporaryLinkStubs.cpp: Removed the PluginDatabase stubs
        that are now platform-independent in plugin/PluginDatabase.cpp.

2008-07-04  Simon Hausmann  <hausmann@webkit.org>

        Fix the Mac build for real, don't define listDirectory() twice.

        * platform/mac/FileSystemMac.mm:

2008-07-04  Simon Hausmann  <hausmann@webkit.org>

        Prospective Mac build fix.

        * platform/mac/FileSystemMac.mm: Include NotImplemented.h.
        * platform/posix/FileSystemPOSIX.cpp: Ditto.

2008-07-04  Tor Arne Vestbø  <tavestbo@trolltech.com>

        Reviewed by Simon.

        Move duplicated code from each PluginDatabaseXX-implementation
        to PluginDabase.cpp -- ifdefed based on the XP_PLATFORM we are
        compiling plugins for.

        This make the code cleaner and we can share common patterns.